Filter Menü hinzugefügt, ItemScore/Schmiedezustand zu Item Viewer hinzugefügt